[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.86",
    "chromadb>=1.4.0",
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "notebook>=7.5.1",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
]
